# kustomize-upstream

./: Cargo.toml  README.md
src/: main.rs
