[package]
name = "kustomize-upstream"
version = "0.1.0"
authors = ["Volker Kleinfeld <31014648+vfeld@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
yaml-merge-keys = "0.4"
exitcode = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
reqwest = { version = "0.11", features = ["blocking"] }
tera = { version = "1.0", default_features = false }

